--- a/Dockerfile.R2019b
+++ b/Dockerfile.R2019b
@@ -1,72 +1,80 @@
-# Copyright 2019 - 2020 The MathWorks, Inc.
 
-FROM ubuntu:18.04 as prebuilder
+# Copyright 2019 The MathWorks, Inc.
 
-LABEL  MAINTAINER=MathWorks
+FROM debian:stretch as prebuilder
+
+MAINTAINER MathWorks
 
 #### Get Dependencies ####
 
-RUN apt-get update && apt-get install --no-install-recommends -y \
-        ca-certificates \
-        libasound2 \
-        libatk1.0-0 \
-        libavcodec-extra57 \
-        libavformat57 \
-        libc6 \
-        libcairo-gobject2 \
-        libcairo2 \
-        libcups2 \
-        libdbus-1-3 \
-        libfontconfig1 \
-        libgdk-pixbuf2.0-0 \
-        libgstreamer-plugins-base1.0-0 \
-        libgstreamer1.0-0 \
-        libgtk-3-0 \
-        libnspr4 \
-        libnss3 \
-        libpam0g \
-        libpango-1.0-0 \
-        libpangocairo-1.0-0 \
-        libpangoft2-1.0-0 \
-        libpython2.7 \
-        libpython3.6 \
-        libpython3.7 \
-        libselinux1 \
-        libsm6 \
-        libsndfile1 \
-        libx11-6 \
-        libx11-xcb1 \
-        libxcb1 \
-        libxcomposite1 \
-        libxcursor1 \
-        libxdamage1 \
-        libxext6 \
-        libxfixes3 \
-        libxft2 \
-        libxi6 \
-        libxinerama1 \
-        libxrandr2 \
-        libxrender1 \
-        libxt6 \
-        libxtst6 \
-        libxxf86vm1 \
-        locales \
-        locales-all \
-        procps \
-        sudo \
-        xkb-data \
-        zlib1g \
-    && apt-get clean \
-    && apt-get -y autoremove \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+ca-certificates \
+lsb-release \
+libasound2 \
+libatk1.0-0 \
+libc6 \
+libcairo2 \
+libcap2 \
+libcomerr2 \
+libcups2 \
+libdbus-1-3 \
+libfontconfig1 \
+libgconf-2-4 \
+libgcrypt20 \
+libgdk-pixbuf2.0-0 \
+libgssapi-krb5-2 \
+libgstreamer-plugins-base1.0-0 \
+libgstreamer1.0-0 \
+libgtk2.0-0 \
+libk5crypto3 \
+libkrb5-3 \
+libnspr4 \
+libnspr4-dbg \
+libnss3 \
+libpam0g \
+libpango-1.0-0 \
+libpangocairo-1.0-0 \
+libpangoft2-1.0-0 \
+libselinux1 \
+libsm6 \
+libsndfile1 \
+libudev1 \
+libx11-6 \
+libx11-xcb1 \
+libxcb1 \
+libxcomposite1 \
+libxcursor1 \
+libxdamage1 \
+libxext6 \
+libxfixes3 \
+libxft2 \
+libxi6 \
+libxmu6 \
+libxrandr2 \
+libxrender1 \
+libxslt1.1 \
+libxss1 \
+libxt6 \
+libxtst6 \
+libxxf86vm1 \
+procps \
+xkb-data \
+xvfb \
+x11vnc \
+xvfb \
+sudo \
+zlib1g
+
+# Uncomment the following RUN apt-get statement to install extended locale support for MATLAB
+#RUN apt-get install -y locales locales-all
 
 # Uncomment the following RUN ln -s statement if you will be running the MATLAB 
 # license manager INSIDE the container.
 #RUN ln -s ld-linux-x86-64.so.2 /lib64/ld-lsb-x86-64.so.3
 
 # Uncomment the following RUN apt-get statement if you will be using Simulink 
-# code generation capabilities, or if you will be compiling your own mex files
-# with gcc, g++, or gfortran.
+# code generation capabilities, or if you will be using mex with gcc, g++, 
+# or gfortran.
 #
 #RUN apt-get install -y gcc g++ gfortran
 
@@ -79,25 +87,18 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 # Uncomment ALL of the following RUN apt-get statement to enable the playing of media files
 # (mp3, mp4, etc.) from within MATLAB.
 #
-#RUN apt-get install --no-install-recommends -y libgstreamer1.0-0 \
+#RUN apt-get install -y libgstreamer1.0-0 \
 # gstreamer1.0-tools \
 # gstreamer1.0-libav \
 # gstreamer1.0-plugins-base \
 # gstreamer1.0-plugins-good \
 # gstreamer1.0-plugins-bad \
-# gstreamer1.0-plugins-ugly
-
-# Uncomment the following line if you require the fuse filesystem - but note that
-# to use fuse in a container you will also need to start the container with the following
-# options (depending on your system configuration)
-#   –device /dev/fuse --cap-add SYS_ADMIN
-#RUN apt-get install --no-install-recommends -y libfuse2
-
-# Uncomment the following line if you require network tools
-#RUN apt-get install --no-install-recommends -y net-tools
+# gstreamer1.0-plugins-ugly \
+# gstreamer1.0-doc
 
 # Uncomment the following RUN apt-get statement if you will be using the 32-bit tcc compiler
 # used in the Polyspace product line.
+#
 #RUN apt-get install -y libc6-i386
 
 # To avoid inadvertantly polluting the / directory, use root's home directory 
@@ -132,25 +133,24 @@ ADD matlab-install /matlab-install/
 #   Uncommented products you want to install
 ADD matlab_installer_input.txt /matlab_installer_input.txt
 
-# Now install MATLAB (make sure that the install script is executable)
-RUN cd /matlab-install && \
-    chmod +x ./install && \
-    ./install -mode silent \
-        -inputFile /matlab_installer_input.txt \
-        -outputFile /tmp/mlinstall.log \
-        -destinationFolder /usr/local/MATLAB \
-    ; EXIT=$? && cat /tmp/mlinstall.log && test $EXIT -eq 0
-
+# Now install MATLAB
+RUN cd /matlab-install \
+    && ./install -mode silent -inputFile /matlab_installer_input.txt
 
 #### Build final container image ####
 FROM prebuilder
 
 COPY --from=middle-stage /usr/local/MATLAB /usr/local/MATLAB
 
-# Add a script to start MATLAB and soft link into /usr/local/bin
+ARG MATLAB_RELEASE
+
+# Add a script to start MATLAB
 ADD startmatlab.sh /opt/startscript/
 RUN chmod +x /opt/startscript/startmatlab.sh && \
-    ln -s /usr/local/MATLAB/bin/matlab /usr/local/bin/matlab
+    ln -s /usr/local/MATLAB/$MATLAB_RELEASE/bin/matlab /usr/local/bin/matlab
+
+# Tell the container what version of MATLAB is being used
+ENV MATLAB_RELEASE $MATLAB_RELEASE
 
 # Add a user other than root to run MATLAB
 RUN useradd -ms /bin/bash matlab
@@ -173,13 +173,15 @@ ENV MLM_LICENSE_FILE=$LICENSE_SERVER
 # Alternatively you can put a license file (or license information) into the 
 # container. You should fill this file out with the details of the license 
 # server you want to use nd uncomment the following line.
-# ADD network.lic /usr/local/MATLAB/licenses/
-   
+# ADD network.lic /usr/local/MATLAB/$MATLAB_RELEASE/licenses/
+
+
+# Finally clean up after apt-get
+RUN apt-get clean \
+    && apt-get -y autoremove \
+    && rm -rf /var/lib/apt/lists/*        
+
 USER matlab
 WORKDIR /home/matlab
-
-# Uncomment and maybe change the following line to setup mex in your container
-# RUN /usr/local/MATLAB/bin/mex -v -setup C++
-
 
 ENTRYPOINT ["/opt/startscript/startmatlab.sh"]
