--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 VB6.0-KB290887-X86.exe filter=lfs diff=lfs merge=lfs -text
+matlab_R2020a_glnxa64.zip filter=lfs diff=lfs merge=lfs -text
