--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.exe filter=lfs diff=lfs merge=lfs -text
 VB6.0-KB290887-X86.exe filter=lfs diff=lfs merge=lfs -text
 matlab_R2020a_glnxa64.zip filter=lfs diff=lfs merge=lfs -text
+Stata16Linux64.tar.gz filter=lfs diff=lfs merge=lfs -text
