--- a/supervisord.conf
+++ b/supervisord.conf
@@ -37,3 +37,11 @@ autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+
+[program:caddy]
+priority=1
+command=/usr/local/bin/caddy run -adapter caddyfile -config /etc/Caddyfile
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
