--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,7 +14,7 @@ redirect_stderr=true
 
 [program:easy-novnc]
 priority=0
-command=/usr/local/bin/easy-novnc --addr :8080 --host localhost --port 5900 --no-url-password --novnc-params "resize=remote"
+command=/usr/local/bin/easy-novnc --addr :6969 --host localhost --port 5900 --no-url-password --novnc-params "resize=remote"
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -39,8 +39,8 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:caddy]
-priority=1
-command=/usr/local/bin/caddy run -adapter caddyfile -config /etc/Caddyfile
+priority=2
+command=/usr/bin/caddy run -adapter caddyfile -config /etc/Caddyfile
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
