added rstudio framework

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 
 [program:x11]
 priority=0
-command=/usr/bin/Xtigervnc -desktop "QGIS" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
+command=/usr/bin/Xtigervnc -desktop "RSTUDIO" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -32,7 +32,7 @@ redirect_stderr=true
 [program:app]
 priority=1
 environment=DISPLAY=:0
-command=/usr/bin/qgis
+command=/usr/bin/rstudio
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
