added new rapidMiner software

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -32,7 +32,7 @@ redirect_stderr=true
 [program:app]
 priority=1
 environment=DISPLAY=:0
-command=/usr/bin/rstudio
+command=/rapidminer-studio/RapidMiner-Studio.sh
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
