--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
 VB6.0-KB290887-X86.exe filter=lfs diff=lfs merge=lfs -text
+rapidminer-studio-9.8.1.zip filter=lfs diff=lfs merge=lfs -text
