--- a/vector-container/http.cfg
+++ b/vector-container/http.cfg
@@ -21,6 +21,7 @@ frontend public_http
   acl static_path path_beg /static
   acl next_path path_beg /_next
   acl api_path path_beg /api
+  acl node_path path_beg /node
   bind *:80
   default_backend auth
   http-response del-header Access-Control-Allow-Headers
@@ -35,6 +36,7 @@ frontend public_http
   use_backend dashboard if static_path
   use_backend dashboard if next_path
   use_backend dashboard if api_path
+  use_backend node if node_path
 
 frontend public_nats_tcp
   bind *:4222
@@ -46,6 +48,11 @@ backend dashboard
   mode http
   http-request replace-path /dashboard /
   server dashboard "localhost:3000"
+
+backend node
+  mode http
+  http-request replace-path /node /
+  server node "localhost:8001"
 
 backend nats_tcp
   mode tcp
