Fix uninitialized chain error

--- a/vector-container/supervisord.conf
+++ b/vector-container/supervisord.conf
@@ -1,7 +1,7 @@
 [program:node]
-# redirect_stderr=true
-# stdout_logfile=/proc/1/fd/1
-# stdout_logfile_maxbytes=0
+redirect_stderr=true
+stdout_logfile=/proc/1/fd/1
+stdout_logfile_maxbytes=0
 autostart=true
 autorestart=false
 startretries=3
@@ -42,9 +42,9 @@ redirect_stderr=true
 stdout_logfile=/proc/1/fd/1
 stdout_logfile_maxbytes=0
 autostart=true
-autorestart=false
+autorestart=true
 startretries=3
-command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && wait-for localhost:8001 && wait-for localhost:80 && cd /root/router && /root/router/ops/entry.sh"
+command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && sleep 60 && wait-for -t 60 localhost:8001 && wait-for -t 60 localhost:80 && cd /root/router && /root/router/ops/entry.sh"
 environment=VECTOR_DATABASE_URL=sqlite:///tmp/router.sqlite,VECTOR_ENV=prod,VECTOR_PROD=true,VECTOR_MNEMONIC="candy maple cake sugar pudding cream honey rich smooth crumble sweet treat"
 
 [program:messaging]
