--- a/nginx.d/default.conf.template
+++ b/nginx.d/default.conf.template
@@ -79,6 +79,9 @@ server {
   location /api {
     gzip on;
 
+    auth_basic           "Authentication Required";
+    auth_basic_user_file /etc/nginx/auth/htpasswd;
+
     proxy_pass							      http://dashboard;
     proxy_http_version  				  1.1;
     proxy_cache_bypass  				  $http_upgrade;
