--- a/vector-container/vector-config.json
+++ b/vector-container/vector-config.json
@@ -20,7 +20,7 @@
     },
     "port": 3001, 
     "redisUrl": "redis://localhost:6379", 
-    "allowedSwaps": [ ], adminToken
+    "allowedSwaps": [ ],
     "nodeUrl": "http://localhost:8001", 
     "rebalanceProfiles": [ 
       { 
