--- a/vector-container/default.conf.template
+++ b/vector-container/default.conf.template
@@ -67,6 +67,9 @@ server {
 
     rewrite ^/dashboard/(.*)$ /$1 break;
 
+    auth_basic "Password Required!";
+    auth_basic_user_file /etc/nginx/auth/htpasswd;
+
     proxy_pass							      http://dashboard;
     proxy_http_version  				  1.1;
     proxy_cache_bypass  				  $http_upgrade;
@@ -78,6 +81,9 @@ server {
 
   location /api {
     gzip on;
+
+    auth_basic "Password Required!";
+    auth_basic_user_file /etc/nginx/auth/htpasswd;
 
     proxy_pass							      http://dashboard;
     proxy_http_version  				  1.1;
