--- a/vector-container/supervisord.conf.template
+++ b/vector-container/supervisord.conf.template
@@ -6,7 +6,7 @@ autostart=true
 autorestart=false
 startretries=3
 command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && export PORT=8001 && cd /root/node && /root/node/ops/entry.sh"
-environment=PORT=8081,VECTOR_ENV=prod,VECTOR_PROD=true,VECTOR_MNEMONIC="candy maple cake sugar pudding cream honey rich smooth crumble sweet treat"
+environment=PORT=8081,VECTOR_ENV=prod,VECTOR_PROD=true,VECTOR_MNEMONIC="${VECTOR_MNEMONIC}"
 
 [program:auth]
 # redirect_stderr=true
@@ -34,7 +34,7 @@ autostart=true
 autorestart=false
 startretries=3
 command=bash -c "cd /root/dashboard && npm run start"
-environment=METRICS_URL=http://localhost:8000/metrics,AUTO_REBALANCE_URL=http://localhost:8000/auto-rebalance,ADMIN_TOKEN=cxt1234
+environment=METRICS_URL=${METRICS_URL},AUTO_REBALANCE_URL=${AUTO_REBALANCE_URL},ADMIN_TOKEN=${ADMIN_TOKEN}
 
 [program:nginx]
 redirect_stderr=true
@@ -44,7 +44,7 @@ autostart=true
 autorestart=false
 startretries=3
 command=nginx -g 'daemon off;'
-environment=DASHBOARD_HOST=localhost:3000,ROUTER_HOST=localhost:8000,NODE_HOST=localhost:8001
+environment=DASHBOARD_HOST=${DASHBOARD_HOST},ROUTER_HOST=${ROUTER_HOST},NODE_HOST=${NODE_HOST}
 
 [program:router]
 redirect_stderr=true
@@ -54,7 +54,7 @@ autostart=true
 autorestart=true
 startretries=3
 command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && sleep 60 && wait-for -t 60 localhost:8001 && wait-for -t 60 localhost:80 && cd /root/router && /root/router/ops/entry.sh"
-environment=VECTOR_DATABASE_URL=sqlite:///tmp/router.sqlite,VECTOR_ENV=prod,VECTOR_PROD=true,VECTOR_MNEMONIC="candy maple cake sugar pudding cream honey rich smooth crumble sweet treat"
+environment=VECTOR_DATABASE_URL=sqlite:///tmp/router.sqlite,VECTOR_ENV=prod,VECTOR_PROD=true,VECTOR_MNEMONIC="${VECTOR_MNEMONIC}"
 
 [program:messaging]
 # redirect_stderr=true
