--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
                 "preferences": {
 					"files.enableTrash": false,
                     "workbench.colorTheme": "Galileo Light"
-                }
+                },
+				"defaultTheme": "Galileo Light"
             }
         },
 		"target": "browser"
