--- a/Caddyfile
+++ b/Caddyfile
@@ -17,7 +17,12 @@
     }
 	
 	handle_path /metrics/* {
-        reverse_proxy http://localhost:9900
+        reverse_proxy http://localhost:9900/metrics
+    }
+	
+	handle_path /premetheus/* {
+        reverse_proxy http://localhost:9090
+		import /tmp/hashpass.txt
     }
     
 }
