--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,35 +4,9 @@ pidfile=/tmp/supervisord.pid
 logfile=/dev/fd/1
 logfile_maxbytes=0
 
-[program:x11]
-priority=0
-command=/usr/bin/Xtigervnc -desktop "STATA" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-[program:easy-novnc]
-priority=0
-command=/usr/local/bin/easy-novnc --addr :6969 --host localhost --port 5900 --no-url-password --novnc-params "resize=remote"
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-[program:openbox]
+[program:theia]
 priority=1
-command=/usr/bin/openbox
-environment=DISPLAY=:0
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-[program:app]
-priority=1
-environment=DISPLAY=:0
-command=/bin/bash /usr/local/stata16/runstatagui.sh
+command=node /theia/src-gen/backend/main.js /home/galileo --hostname=0.0.0.0
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
