--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,9 +4,9 @@ pidfile=/tmp/supervisord.pid
 logfile=/dev/fd/1
 logfile_maxbytes=0
 
-[program:theia]
+[program:galileo-ide]
 priority=1
-command=node /theia/src-gen/backend/main.js /home/galileo --hostname=0.0.0.0
+command=node /theia/src-gen/backend/main.js --hostname=0.0.0.0
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
