--- a/Caddyfile
+++ b/Caddyfile
@@ -8,21 +8,12 @@
 		import /tmp/hashpass.txt
     }
 	
-	handle_path /rpc/* {
-        reverse_proxy http://localhost:9500
+	handle_path /http/* {
+        reverse_proxy http://127.0.0.1:8545
     }
 	
 	handle_path /ws/* {
-        reverse_proxy http://localhost:9800
+        reverse_proxy ws://127.0.0.1:8546
     }
 	
-	handle_path /metrics/* {
-        reverse_proxy http://localhost:9900/metrics
-    }
-	
-	handle_path /premetheus/* {
-        reverse_proxy http://localhost:9090
-		import /tmp/hashpass.txt
-    }
-    
 }
