--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,9 +4,9 @@ pidfile=/tmp/supervisord.pid
 logfile=/dev/fd/1
 logfile_maxbytes=0
 
-[program:geth]
+[program:galileo-ide]
 priority=1
-command=/usr/bin/geth --syncmode light --cache 4096 --rpc --rpcaddr "0.0.0.0" --rpccorsdomain "*" --rpcport "8545" --rpcapi "db, eth, net, web3, personal" --ws --wsport 8546 --wsaddr "0.0.0.0" --wsorigins "*" --wsapi "web3, eth" --maxpeers=10
+command=node /theia/src-gen/backend/main.js --hostname=0.0.0.0
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
