--- a/.theia/tasks.json
+++ b/.theia/tasks.json
@@ -4,33 +4,45 @@
             "id": "start-algorand-node",
             "label": "Start Relay Node",
             "description": "Start the Algorand Relay node in the backgournd.",
-            "missionType": "Algorand",
             "type": "shell",
-            "command": "/home/galileo/goal node start"
+            "command": "/home/galileo/goal node start",
+            "icon": {
+                "prefix": "far",
+                "name": "play-circle"
+            }
         },
         {
             "id": "stop-algorand-node",
             "label": "Stop Relay Node",
             "description": "Stop the Algorand Relay node.",
-            "missionType": "Algorand",
             "type": "shell",
-            "command": "/home/galileo/goal node stop"
+            "command": "/home/galileo/goal node stop",
+            "icon": {
+                "prefix": "far",
+                "name": "stop-circle"
+            }
         },
 		{
             "id": "algorand-node-status",
             "label": "Get Node Status",
             "description": "Check on the status of your Algorand node.",
-            "missionType": "Algorand",
             "type": "shell",
-            "command": "/home/galileo/goal node status"
+            "command": "/home/galileo/goal node status",
+            "icon": {
+                "prefix": "fas",
+                "name": "info-circle"
+            }
         },
         {
             "id": "algorand-node-update",
             "label": "Upgrade Node",
             "description": "Check for upgrades and apply them if necessary.",
-            "missionType": "Algorand",
             "type": "shell",
-            "command": "bash /home/galileo/update.sh -d /home/galileo/data"
-        }
+            "command": "bash /home/galileo/update.sh -d /home/galileo/data",
+            "icon": {
+                "prefix": "fas",
+                "name": "sync"
+            }
+        },
     ]
 }
