--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -24,37 +24,64 @@
     "galileo.ui_components": [
         {
         "type": "custom",
-        "title": "Getting Started",
+        "title": "Ethereum Resources",
         "content": [
             {
-            "title": "Etherum Home Page",
+            "title": "🌎 Etherum Home Page",
             "href": "https://ethereum.org/",
             "priority": 0
             },
             {
-            "title": "Developer Resources",
+            "title": "📙 Developer Resources",
             "href": "https://ethereum.org/en/developers/",
             "priority": 1
             },
             {
-            "title": "Geth Node Guide",
+            "title": "🛸 Geth Node Guide",
             "href": "https://geth.ethereum.org/docs/",
             "priority": 2
-            },
+            }
+        ]
+        },
+		{
+        "type": "custom",
+        "title": "Ethereum 2.0",
+        "content": [
 			{
-			"title": "Eth2 Clients",
-			"href", "https://ethereum.org/en/eth2/get-involved/#clients/",
-			"priority": 3
+			"title": "🔥 Eth2 Clients",
+			"href": "https://ethereum.org/en/eth2/get-involved/#clients/",
+			"priority": 0
 			},
 			{
-			"title": "Ethereum 2.0 Launchpad",
-			"href", "https://launchpad.ethereum.org/",
-			"priority": 4
+			"title": "🦏 Ethereum 2.0 Launchpad",
+			"href": "https://launchpad.ethereum.org/",
+			"priority": 1
 			},
 			{
-			"title": "Ethereum 2.0 Deposit CLI",
-			"href", "https://github.com/ethereum/eth2.0-deposit-cli/releases/", 
-			"priority": 5
+			"title": "💸 Ethereum 2.0 Deposit CLI",
+			"href": "https://github.com/ethereum/eth2.0-deposit-cli/releases/", 
+			"priority": 2
+			}
+        ]
+        },
+		{
+        "type": "custom",
+        "title": "Solidity Language",
+        "content": [
+			{
+			"title": "🤓 Solidity Documentation",
+			"href": "https://docs.soliditylang.org/en/v0.8.5/",
+			"priority": 0
+			},
+			{
+			"title": "👷‍♂️ Hardhat Environment",
+			"href": "https://hardhat.org/",
+			"priority": 1
+			},
+			{
+			"title": "🍄 Truffle Environment",
+			"href": "https://www.trufflesuite.com/", 
+			"priority": 2
 			}
         ]
         }
