--- a/.theia/tasks.json
+++ b/.theia/tasks.json
@@ -7,8 +7,8 @@
             "type": "shell",
             "command": "geth --syncmode light --cache 2048 --http --http.api eth,net,web3 --ws --graphql --metrics",
 			"icon": {
-                "prefix": "far",
-                "name": "play-circle"
+                "prefix": "fas",
+                "name": "feather-alt"
             }
         },
         {
@@ -52,7 +52,7 @@
             "command": "geth --goerli --syncmode fast --cache 2048 --http --http.api eth,net,web3 --ws --graphql --metrics",
 			"icon": {
                 "prefix": "fas",
-                "name": "fast-forward"
+                "name": "feather-alt"
             }
         },
 		{
@@ -74,7 +74,7 @@
             "command": "geth --rinkeby --syncmode light --cache 2048 --http --http.api eth,net,web3 --ws --graphql --metrics",
 			"icon": {
                 "prefix": "fas",
-                "name": "fast-forward"
+                "name": "feather-alt"
             }
         },
 		{
@@ -101,13 +101,35 @@
         },
 		{
             "id": "start-node-terminal",
-            "label": "Open Node Terminal",
-            "description": "NodeJS terminal",
+            "label": "NodeJS Terminal",
+            "description": "Open a NodeJS terminal",
             "type": "shell",
             "command": "/usr/bin/node",
 			"icon": {
                 "prefix": "fab",
                 "name": "node"
+            }
+        },
+		{
+            "id": "start-bash-terminal",
+            "label": "Bash Terminal",
+            "description": "Open a Bash terminal",
+            "type": "shell",
+            "command": "/bin/bash && cd /home/galileo",
+			"icon": {
+                "prefix": "fab",
+                "name": "terminal"
+            }
+        },
+		{
+            "id": "start-hardhat",
+            "label": "Hardhat",
+            "description": "Create a new Hardhat project.",
+            "type": "shell",
+            "command": "npm install --save-dev hardhat @nomiclabs/hardhat-waffle ethereum-waffle chai @nomiclabs/hardhat-ethers ethers -g && npx hardhat",
+			"icon": {
+                "prefix": "fas",
+                "name": "hard-hat"
             }
         }
     ]
